--- a/DoctorsLog/MainWindow.xaml
+++ b/DoctorsLog/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:local="clr-namespace:DoctorsLog"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Title="Doctor's Log" Height="600" Width="1000">
+        Title="Doctor's Log" Height="600" Width="1020">
 
     <Grid Background="#F0F4F8">
         <Grid.RowDefinitions>
@@ -118,7 +118,7 @@
                 </StackPanel>
 
                 <ContentControl Grid.Row="1" x:Name="MainContentControl">
-                    <Grid x:Name="PatientsView">
+                    <Grid x:Name="PatientsView" Loaded="PatientsView_Loaded">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
                             <RowDefinition Height="Auto"/>
@@ -137,34 +137,35 @@
                                       Background="Transparent" />
                             </Border>
                         </StackPanel>
-                        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Left" Margin="0 0 0 10">
-                            <Border CornerRadius="8" Background="#FFFFFF">
+                        <WrapPanel Grid.Row="1" HorizontalAlignment="Left" Margin="0 0 0 10">
+                            <Border CornerRadius="8" Background="#FFFFFF" Margin="0 5">
                                 <TextBox x:Name="tbName"
-                                         Padding="10 5"
-                                         MinWidth="110"
-                                         FontSize="16"
-                                         md:HintAssist.Hint="Ismi"
-                                         Style="{DynamicResource MaterialDesignTextBox}"
-                                         BorderThickness="0"
-                                         Background="Transparent"
-                                         KeyDown="TextBox_KeyDown"/>
+                 Padding="10 5"
+                 MinWidth="110"
+                 FontSize="16"
+                 md:HintAssist.Hint="Ismi"
+                 Style="{DynamicResource MaterialDesignTextBox}"
+                 BorderThickness="0"
+                 Background="Transparent"
+                 KeyDown="TextBox_KeyDown"/>
                             </Border>
-                            <Border CornerRadius="8" Background="#FFFFFF" Margin="5 0">
+
+                            <Border CornerRadius="8" Background="#FFFFFF" Margin="5 5">
                                 <TextBox x:Name="tbLastName"
-                                         Padding="10 5"
-                                         MinWidth="110"
-                                         FontSize="16"
-                                         md:HintAssist.Hint="Familiya"
-                                         Style="{DynamicResource MaterialDesignTextBox}"
-                                         BorderThickness="0"
-                                         Background="Transparent" 
-                                         KeyDown="TextBox_KeyDown"/>
+                 Padding="10 5"
+                 MinWidth="110"
+                 FontSize="16"
+                 md:HintAssist.Hint="Familiya"
+                 Style="{DynamicResource MaterialDesignTextBox}"
+                 BorderThickness="0"
+                 Background="Transparent"
+                 KeyDown="TextBox_KeyDown"/>
                             </Border>
-                            <!-- Tug‘ilgan sana -->
-                            <StackPanel Orientation="Horizontal" Margin="0" Background="#F0F4F8">
+
+                            <StackPanel Orientation="Horizontal" Margin="5 5" Background="#F0F4F8">
                                 <TextBlock Text="Tug‘ilgan sana" FontSize="16" Width="110" VerticalAlignment="Center"/>
                                 <Border CornerRadius="7" Margin="5 0" Background="#FFFFFF">
-                                    <Grid >
+                                    <Grid>
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="*" />
                                             <ColumnDefinition Width="Auto" />
@@ -180,32 +181,33 @@
                                 </Border>
                             </StackPanel>
 
-                            <Border CornerRadius="8" Background="#FFFFFF" Margin="5 0">
+                            <Border CornerRadius="8" Background="#FFFFFF" Margin="5 5">
                                 <TextBox x:Name="tbAddress"
-                                         Padding="10 5"
-                                         MinWidth="150"
-                                         FontSize="16"
-                                         md:HintAssist.Hint="Manzil"
-                                         Style="{DynamicResource MaterialDesignTextBox}"
-                                         BorderThickness="0"
-                                         Background="Transparent" 
-                                         KeyDown="TextBox_KeyDown"/>
+                 Padding="10 5"
+                 MinWidth="150"
+                 FontSize="16"
+                 md:HintAssist.Hint="Manzil"
+                 Style="{DynamicResource MaterialDesignTextBox}"
+                 BorderThickness="0"
+                 Background="Transparent"
+                 KeyDown="TextBox_KeyDown"/>
                             </Border>
-                            <Border CornerRadius="8" Background="#FFFFFF" Margin="5 0">
-                                <TextBox x:Name="tbPhone"
-                                         Padding="10 5"
-                                         MinWidth="155"
-                                         FontSize="16"
-                                         md:HintAssist.Hint="+998 "
-                                         Style="{DynamicResource MaterialDesignTextBox}"
-                                         BorderThickness="0"
-                                         Background="Transparent" 
-                                         TextChanged="TbPhone_TextChanged" 
-                                         KeyDown="TextBox_KeyDown"/>
-                            </Border>
-                            <Button x:Name="btnSave" Content="Saqlash" Background="#D4D8DB" Margin="5 0" BorderThickness='0'/>
-                        </StackPanel>
 
+                            <Border CornerRadius="8" Background="#FFFFFF" Margin="5 5">
+                                <TextBox x:Name="tbPhone"
+                 Padding="10 5"
+                 MinWidth="155"
+                 FontSize="16"
+                 md:HintAssist.Hint="+998 "
+                 Style="{DynamicResource MaterialDesignTextBox}"
+                 BorderThickness="0"
+                 Background="Transparent"
+                 TextChanged="TbPhone_TextChanged"
+                 KeyDown="TextBox_KeyDown"/>
+                            </Border>
+
+                            <Button x:Name="btnSave" Content="Saqlash" Background="#D4D8DB" Margin="5 5" BorderThickness='0'/>
+                        </WrapPanel>
                         <Border Grid.Row="2" Background="White" CornerRadius="10" Padding="15" BorderBrush="#D3DDE6" BorderThickness="1">
                             <DataGrid x:Name="PatientsDataGrid"  AutoGenerateColumns="False"
                                       IsReadOnly="True" HeadersVisibility="Column"
