--- a/DoctorsLog/MainWindow.xaml
+++ b/DoctorsLog/MainWindow.xaml
@@ -111,8 +111,8 @@
                     <Border Background="White" CornerRadius="10" Padding="15" BorderBrush="#D3DDE6" BorderThickness="1"
                             Width="150" Height="80">
                         <StackPanel>
-                            <TextBlock x:Name="tbRecipeCount" Text="Retseptlar soni" Foreground="#888" FontSize="12"/>
-                            <TextBlock x:Name="PrescriptionsCountText" Text="0" Foreground="#334257" FontWeight="Bold" FontSize="18"/>
+                            <TextBlock Text="Retseptlar soni" Foreground="#888" FontSize="12"/>
+                            <TextBlock x:Name="tbRecipeCount" Text="0" Foreground="#334257" FontWeight="Bold" FontSize="18"/>
                         </StackPanel>
                     </Border>
                 </StackPanel>
@@ -136,17 +136,17 @@
                                       Background="Transparent" TextChanged="TbSearch_TextChanged" />
                             </Border>
                         </StackPanel>
-                        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Left" Margin="0 0 0 10">
-                            <Border CornerRadius="8" Background="#FFFFFF">
+                        <WrapPanel Grid.Row="1" HorizontalAlignment="Left" Margin="0 0 0 10">
+                            <Border CornerRadius="8" Background="#FFFFFF" Margin="0 5">
                                 <TextBox x:Name="tbFirstName"
-                                         Padding="10 5"
-                                         MinWidth="110"
-                                         FontSize="16"
-                                         md:HintAssist.Hint="Ismi"
-                                         Style="{DynamicResource MaterialDesignTextBox}"
-                                         BorderThickness="0"
-                                         Background="Transparent"
-                                         KeyDown="TextBox_KeyDown"/>
+                 Padding="10 5"
+                 MinWidth="110"
+                 FontSize="16"
+                 md:HintAssist.Hint="Ismi"
+                 Style="{DynamicResource MaterialDesignTextBox}"
+                 BorderThickness="0"
+                 Background="Transparent"
+                 KeyDown="TextBox_KeyDown"/>
                             </Border>
 
                             <Border CornerRadius="8" Background="#FFFFFF" Margin="5 5">
@@ -204,8 +204,6 @@
                  TextChanged="TbPhone_TextChanged"
                  KeyDown="TextBox_KeyDown"/>
                             </Border>
-                            <Button x:Name="btnSave" Content="Saqlash" Background="#D4D8DB" Margin="5 0" BorderThickness='0' Click="BtnSave_Click"/>
-                        </StackPanel>
 
                             <Button x:Name="btnSave" Content="Saqlash" Background="#D4D8DB" Margin="5 5" BorderThickness='0'/>
                         </WrapPanel>
@@ -216,16 +214,7 @@
                                       RowBackground="#F9F9F9"
                                       AlternatingRowBackground="#F0F0F0" SelectionChanged="PatientsDataGrid_SelectionChanged">
                                 <DataGrid.Columns>
-                                    <DataGridTemplateColumn Header="T/r" Width="50">
-                                        <DataGridTemplateColumn.CellTemplate>
-                                            <DataTemplate>
-                                                <TextBlock Loaded="IndexBlock_Loaded"
-                                                       HorizontalAlignment="Center"
-                                                       FontWeight="Bold"/>          
-                                            </DataTemplate>
-                                        </DataGridTemplateColumn.CellTemplate>
-                                    </DataGridTemplateColumn>
-
+                                    <DataGridTextColumn Header="T/r" Binding="{Binding TartibNomer}" Width="50"/>
                                     <DataGridTextColumn Header="Ismi" Binding="{Binding FirstName}" Width="*"/>
                                     <DataGridTextColumn Header="Familiyasi" Binding="{Binding LastName}" Width="*"/>
                                     <DataGridTextColumn Header="Tug'ilgan yili" Binding="{Binding DateOfBirth}" Width="*"/>
