--- a/DoctorsLog/MainWindow.xaml
+++ b/DoctorsLog/MainWindow.xaml
@@ -264,10 +264,10 @@
                                     <DataGridTemplateColumn Header="Amallar" Width="Auto">
                                         <DataGridTemplateColumn.CellTemplate>
                                             <DataTemplate>
-                                                <StackPanel Orientation="Horizontal">
-                                                    <Button Content="Retseplar" Background="#6A9B9B" Margin="0,0,5,0"/>
-                                                    <Button Content="O'zgartirish" Background="#ccb50a" Margin="0,0,5,0" Click="BtnEditPatientInfo_Click"/>
-                                                    <Button Content="O'chirish" Background="#F44336" Click="BtnDelete_Click"/>
+                                                <StackPanel Orientation="Horizontal" Margin="0">
+                                                    <Button Content="📋" Background="#6A9B9B" Width="30"  Padding="0"  Margin="0,0,5,0"/>
+                                                    <Button Content="✏️" Background="#ccb50a" Width="30" Padding="0" Margin="0,0,5,0" Click="BtnEditPatientInfo_Click"/>
+                                                    <Button Content="🗑" Background="#F44336" Width="30"  Padding="0" Margin="0" Click="BtnDelete_Click"/>
                                                 </StackPanel>
                                             </DataTemplate>
                                         </DataGridTemplateColumn.CellTemplate>
